--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -43,6 +43,9 @@ dev = [
     "pre-commit>=4.0.0",
 ]
 
+[tool.hatch.build.targets.wheel]
+packages = ["app"]
+
 [tool.ruff]
 target-version = "py312"
 line-length = 100
